# syntexa

./: .gitignore  CLAUDE.md  README.md  skills-lock.json
.specify/: feature.json  init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/syntexa/adapters/: __init__.py  base.py  clickup.py  github.py
backend/syntexa/api/: auth.py  dependencies.py  main.py  middleware.py  schemas.py
backend/syntexa/api/routes/: __init__.py  agents.py  auth.py  compositions.py  credentials.py  listeners.py  llm_providers.py  presets.py  repositories.py  roles.py  settings.py  swarms.py  users.py
backend/syntexa/config/: settings.py
backend/syntexa/core/: __init__.py  crypto.py
backend/syntexa/daemon/: cleanup.py  compositions.py  main.py  poller.py  settings_watcher.py  workspace.py
backend/syntexa/listeners/: __init__.py  base.py  clickup_listener.py  event.py  registry.py  telegram_listener.py
backend/syntexa/llm/: __init__.py  provider_config.py
backend/syntexa/migrations/: env.py
backend/syntexa/migrations/versions/: 171d57f353b4_add_swarms_tables.py  3a0397047483_add_repositories_table.py  3b87d5d313c7_add_agents_table.py  8b2e9a37c1d4_add_processed_events_and_trigger_tag.py  9c4f2a8e7b13_drop_legacy_agent_roles_compositions_instances.py  d46ac74852ca_add_llm_providers_table.py  f544d974925d_add_external_credentials_table.py
backend/syntexa/models/: __init__.py  database.py  entities.py
backend/syntexa/orchestrator/: __init__.py  decision.py  executor.py
backend/syntexa/presets/: __init__.py  agents.py  apply.py  providers.py  swarm_templates.py
backend/syntexa/tests/: conftest.py  test_agents_api.py  test_auth_api.py  test_clickup_listener.py  test_compositions_api.py  test_crypto.py  test_executor.py  test_listeners_api.py  test_listeners_base.py  test_llm_provider_config.py  test_llm_providers_api.py  test_orchestrator_decision.py  test_orchestrator_executor.py  test_presets.py  test_repositories_api.py  test_roles_api.py  test_settings_api.py  test_swarm_ag2_bindings.py  test_swarms_api.py  test_swarms_run_api.py  test_telegram_listener.py  test_users_api.py
deploy/: syntexa.service
docs/: API.md  ARCHITECTURE.md  CODE_MAP.md  CONCEPTS.md  LISTENERS.md  PROVIDERS.md  QUICKSTART.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  theme.js
scripts/: dev.bat  dev.py  dev.sh
syntexa/: alembic.ini  pyproject.toml
(+73 files in other folders)
