[project]
name = "syntexa"
version = "0.1.0"
description = "Autonomous coding platform with agent swarm orchestration"
authors = [{name = "antoniodevivo"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    # Agent Framework — AG2 (ag2ai/ag2), swarm orchestration per research.md.
    # 0.11 renamed the swarm API: run_swarm + ConversableAgent.register_handoffs.
    "ag2>=0.11,<0.12",
    # Authentication & Security
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    # HTTP Clients
    "httpx>=0.25",
    "requests>=2.31",
    # Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.25",  # for FastAPI TestClient
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
syntexa = "syntexa.cli:main"
syntexa-daemon = "syntexa.daemon.main:run"
syntexa-api = "syntexa.api.main:run"

[tool.hatch.envs.dev]
dependencies = [
    "uvicorn[standard]>=0.23",
    "watchdog>=3.0",
]

[tool.hatch.envs.dev.scripts]
dev = "uvicorn syntexa.api.main:app --reload --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syntexa"]

[tool.pytest.ini_options]
# Paths are relative to this pyproject.toml (i.e. backend/).
testpaths = ["syntexa/tests"]
# Put backend/ on sys.path so `import syntexa` resolves to backend/syntexa/
# when pytest is invoked either from repo root or from backend/.
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["syntexa"]
omit = ["*/tests/*", "*/test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
